--- a/app/src/main/res/layout/activity_index.xml
+++ b/app/src/main/res/layout/activity_index.xml
@@ -65,15 +65,27 @@
         app:layout_constraintTop_toBottomOf="@+id/divisible_by_five" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/discount_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="31dp"
+        android:layout_marginTop="8dp"
         android:backgroundTint="#03A9F4"
         android:padding="4dp"
         android:text="Discount"
         android:textAllCaps="false"
         app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="@+id/guideline3"
         app:layout_constraintTop_toBottomOf="@+id/divisible_by_15" />
+
+    <Button
+        android:id="@+id/farm_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#03A9F4"
+        android:text="Farm Problem"
+        android:textAllCaps="false"
+        app:layout_constraintEnd_toStartOf="@+id/guideline4"
+        app:layout_constraintStart_toStartOf="@+id/guideline3"
+        app:layout_constraintTop_toBottomOf="@+id/discount_btn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
